@@ -5518,7 +5518,10 @@ Version 1.6.22beta03 [February 13, 2016]
     to the LICENSE file, png.h, and the man page.
   Restored "& 0xff" in png_save_uint_16() and png_save_uint_32() that
     were accidentally removed from libpng-1.6.17. 
-  Changed PNG_INFO_cHNK from 0xnnnn to 0xnnnnU (Robert C. Seacord).
+  Changed PNG_INFO_cHNK and PNG_FREE_cHNK from 0xnnnn to 0xnnnnU in png.h
+   (Robert C. Seacord).
+  Removed dubious "#if INT_MAX" test from png.h that was added to
+   libpng-1.6.19bet02 (John Bowler).
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
